[project]
name = "znmdakit"
version = "0.1.0"
description = "MD post processing tools."
authors = [
    { name = "Fabian Zills", email = "fzills@icp.uni-stuttgart.de" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ase>=3.24.0",
    "mdanalysis>=2.8.0",
    "pandas>=2.2.3",
    "pint>=0.23.0",
    "rdkit2ase>=0.1.4",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "tidynamics>=1.1.2",
    "znh5md>=0.4.3",
    "zntrack>=0.8.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
